Fix #199: Config Mapping update